added json for 2025-09-02

--- a/examples/download_images.ipynb
+++ b/examples/download_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0a41b6c1",
    "metadata": {},
    "outputs": [],
@@ -17,18 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "64982c21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_file = pathlib.Path(r\"C:\\code_ibre\\load-simpla-annotations\\data\\ai_assisted\\20250813\\stand_2025-08-13.json\")\n",
-    "image_dir = pathlib.Path(r\"C:\\code_ibre\\load-simpla-annotations\\data\\ai_assisted\\20250813\\images\")"
+    "export_file = pathlib.Path(r\"C:\\code_ibre\\load-simpla-annotations\\data\\ai_assisted\\20250902\\project-2-at-2025-09-02-11-09-ffaf1047.json\")\n",
+    "image_dir = pathlib.Path(r\"C:\\code_ibre\\load-simpla-annotations\\data\\ai_assisted\\20250902\\images\")\n",
+    "\n",
+    "if not image_dir.exists():\n",
+    "    image_dir.mkdir(parents=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "c9ca9f5d",
    "metadata": {},
    "outputs": [],
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cbd3de72",
    "metadata": {},
    "outputs": [],
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a4176a3d",
    "metadata": {},
    "outputs": [],
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7157875d",
    "metadata": {},
    "outputs": [],
@@ -82,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4871b4cb",
    "metadata": {},
    "outputs": [],
